--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-lang-key="ls_page_title">Lobster Shack Bali - Fresh Seafood</title>
+
+    <title>Lobster Shack Bali - Fresh Seafood Restaurant in Kuta</title>
+    <meta name="description" content="Experience the best and freshest lobster and seafood in the heart of Bali. Lobster Shack Bali in Kuta offers a cozy atmosphere, grilled-to-perfection dishes, and unforgettable culinary moments.">
+    <meta name="keywords" content="lobster bali, seafood kuta, best lobster in bali, seafood restaurant bali, lobster shack, fresh seafood, bali dining, kuta restaurant">
+    <meta name="author" content="Lobster Shack Bali">
+    <meta name="robots" content="index, follow">
+
+    <link rel="icon" href="https://lh3.googleusercontent.com/d/1GIdbd0F7kn0O4L8qEr-25GXSEWbLNVj9" type="image/png">
+    <link rel="apple-touch-icon" href="https://lh3.googleusercontent.com/d/1GIdbd0F7kn0O4L8qEr-25GXSEWbLNVj9">
     
+    <meta property="og:title" content="Lobster Shack Bali - The Ultimate Seafood Experience">
+    <meta property="og:description" content="Savor the freshest lobster and seafood, grilled to perfection in the heart of Kuta, Bali.">
+    <meta property="og:image" content="https://lh3.googleusercontent.com/d/1GIdbd0F7kn0O4L8qEr-25GXSEWbLNVj9">
+    <meta property="og:url" content="https://www.yourwebsite.com/"> <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Lobster Shack Bali">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Lobster Shack Bali - The Ultimate Seafood Experience">
+    <meta name="twitter:description" content="Savor the freshest lobster and seafood, grilled to perfection in the heart of Kuta, Bali.">
+    <meta name="twitter:image" content="https://lh3.googleusercontent.com/d/1GIdbd0F7kn0O4L8qEr-25GXSEWbLNVj9">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Playfair+Display:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
@@ -85,7 +104,7 @@
         <div class="ls-container">
             <div class="footer-content">
                 <div class="footer-about">
-                    <img src="https://lh3.googleusercontent.com/d/1GIdbd0F7kn0O4L8qEr-25GXSEWbLNVj9" alt="Logo Lobster Shack" class="ls-logo">
+                    <img src="https://lh3.googleusercontent.com/d/1GIdbd0F7kn0O4L8qEr-25GXSEWbLNVj9" alt="Lobster Shack Bali Logo in Footer" class="ls-logo">
                     <p data-lang-key="footer_description">Experience the finest catch of the day, grilled to perfection, in a cozy and inviting atmosphere. We look forward to welcoming you.</p>
                 </div>
                 <div class="footer-contact">
@@ -103,7 +122,9 @@
                     <h3 class="ls-footer-title" data-lang-key="footer_follow_title">Follow Us</h3>
                     <p data-lang-key="footer_follow_text">Stay connected for the latest updates and offers.</p>
                     <ul class="ls-footer-socials">
-                        <li><a href="https://www.instagram.com/lobstershackbali" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#" aria-label="TripAdvisor"><i class="fab fa-tripadvisor"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -122,7 +143,7 @@
 
     <div class="ls-cookie-consent" id="ls-cookie-consent">
         <div class="ls-container">
-            <p data-lang-key="cookie_text">We use cookies to enhance your Browse experience and to analyze our traffic. By clicking "Accept", you consent to our use of cookies.</p>
+            <p data-lang-key="cookie_text">We use cookies to enhance your browse experience and to analyze our traffic. By clicking "Accept", you consent to our use of cookies.</p>
             <button class="ls-btn" id="ls-cookie-accept-btn" data-lang-key="cookie_accept_btn">Accept</button>
         </div>
     </div>
