--- a/index.html
+++ b/index.html
@@ -122,9 +122,7 @@
                     <h3 class="ls-footer-title" data-lang-key="footer_follow_title">Follow Us</h3>
                     <p data-lang-key="footer_follow_text">Stay connected for the latest updates and offers.</p>
                     <ul class="ls-footer-socials">
-                        <li><a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
-                        <li><a href="#" aria-label="TripAdvisor"><i class="fab fa-tripadvisor"></i></a></li>
+                        <li><a href="https://www.instagram.com/lobstershackbali" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
                     </ul>
                 </div>
             </div>
